# tiger-cranelift

./: .gitignore  Cargo.toml  LICENSE  README.md  file_test.py  test_all.sh
src/: ast.rs  error.rs  intern.rs  interner.rs  lexer.rs  lib.rs  parser.rs  pos.rs  symbol_table.rs  ty.rs
src/semant/: env.rs  func_context.rs  lifting.rs  mod.rs  semantic_analyzer.rs  type_alias.rs
tiger_runtime/: Cargo.toml
tiger_runtime/src/: lib.rs
tigerc/: Cargo.toml
tigerc/src/: codegen.rs  error.rs  interner.rs  lexer.rs  lib.rs  main.rs  parser.rs  symbol_table.rs  ty.rs
tigerc/src/semant/: env.rs  func_context.rs  lifting.rs  mod.rs  semantic_analyzer.rs
tigerc/tests/: array.expect  array.tig  factorial.tig  logical.expect  logical.tig  nested_array.tig  queens.tig  record.expect  record.tig  string.expect  string.tig
