[package]
name = "tigerc"
version = "0.1.0"
authors = ["Y-Nak <yurayura.rounin.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-arena = "2.0.1"
colored = "1.9.2"
clap = "2.31.2"

cranelift = "0.56.0"
cranelift-module = "0.56.0"
cranelift-object = "0.56.0"

target-lexicon = "0.10.0"

